Refactor shoutout display logic and update API endpoint for fetching shoutouts

--- a/index.html
+++ b/index.html
@@ -218,34 +218,8 @@
         <!-- CAROUSEL LAYOUTS FOR MOBILE  -->
         <div class="block sm:hidden px-4 my-8">
           <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide bg-white rounded-xl flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2 rounded-xl text-left">
-                  <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael
-                      Joe</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Happy Birthday to a true star! 🌟 Wishing you a day full of love,
-                    fun, and unforgettable moments. Cheers to another epic year! 🎉🎂</p>
-                </div>
-              </div>
-              <!-- Repeat for other slides, ensuring consistent classes (remove w-72) -->
-              <!-- Example for second slide -->
-              <div class="swiper-slide bg-white rounded-xl flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Magret
-                      Amon</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Happiest of birthdays to you! 🎈 May your special day overflow with
-                    happiness, surprises, and all your favorite things. Here’s to shining bright! 🥳🎁</p>
-                </div>
-              </div>
-              <!-- Add other slides similarly -->
+            <div class="swiper-wrapper shoutoutSwipe">
+              <div class=""></div>
             </div>
             <div class="swiper-pagination mt-6"></div>
             <!-- <div class="swiper-button-prev !text-[#FC9A04] !left-0"></div>
@@ -255,106 +229,7 @@
       </div>
 
       <!-- Grid Layout (Visible from sm and above) -->
-      <div class="hidden sm:grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mb-8 px-4">
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">Happy Birthday to a one-of-a-kind treasure! 💖 May your special day be
-              filled with joy, love, and endless fun. Cheers to another year of brilliance! 🎂🎉</p>
-          </div>
-        </div>
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Magret Amon</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">Here’s to you on your big day! 🎈 Happy Birthday! May it be filled with
-              love, laughter, and all the things that make your heart soar. To an amazing year ahead! 🥳✨</p>
-          </div>
-        </div>
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Peter perry</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">Happy Birthday to a true star! 🌟 Wishing you a day full of love, fun,
-              and unforgettable moments. Cheers to another epic year! 🎉🎂</p>
-          </div>
-        </div>
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Chrisy Carly</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">Happiest of birthdays to you! 🎈 May your special day overflow with
-              happiness, surprises, and all your favorite things. Here’s to shining bright! 🥳🎁</p>
-          </div>
-        </div>
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Marry Flok</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">Happy Birthday to someone who lights up every room! ✨ May your day be
-              packed with joy, love, and sweet celebrations. To another year of awesomeness! 🎂🎉</p>
-          </div>
-        </div>
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael
-                Freeman</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">It’s your day to sparkle! 🎉 Happy Birthday! Wishing you endless
-              laughter, love, and all the happiness you deserve. Here’s to a fabulous year ahead! 🥂🎈</p>
-          </div>
-        </div>
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Anita Jane</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">Wishing you the happiest of birthdays! 🎈 May your day be as amazing as
-              you are, filled with love, laughter, and sweet surprises. To another year of magic! 🥳🎉</p>
-          </div>
-        </div>
-        <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">James Carly</span>
-            </p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">It’s your birthday, and you deserve the best! 🎉 Wishing you a day full
-              of laughter, love, and pure happiness. Here’s to a spectacular year! 🥂🎈</p>
-          </div>
-        </div>
-
-      </div>
+      <div class="hidden sm:grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mb-8 px-4 shoutouts"></div>
       <a href="shoutouts.html"
         class="bg-[#FC9A04] text-[#FFFFFF] text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:text-white transition">Load
         More</a>
@@ -480,20 +355,20 @@
           <h2 class="font-bold text-2xl sm:text-3xl lg:text-[40px] text-[#121212] pb-4">Contact Us</h2>
           <p class="text-base sm:text-lg text-[#4F4F4F] pb-6">Let’s Bring Your Celebration to Life!</p>
 
-          <form action="" class="flex flex-col gap-2">
+          <form name="contactForm" class="flex flex-col gap-2">
             <div class="flex flex-col gap-1">
               <label for="name" class="text-sm sm:text-base font-medium text-[#121212]">Name</label>
-              <input type="text" id="name" placeholder="Your name here"
+              <input name="name" type="text" id="name" placeholder="Your name here"
                 class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
             </div>
             <div class="flex flex-col gap-2">
               <label for="email" class="text-sm sm:text-base font-medium text-[#121212]">Email</label>
-              <input type="email" id="email" placeholder="email@gmail.com"
+              <input name="email" type="email" id="email" placeholder="email@gmail.com"
                 class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
             </div>
             <div class="flex flex-col gap-2">
               <label for="message" class="text-sm sm:text-base font-medium text-[#121212]">Message</label>
-              <textarea id="message" placeholder="Your message here" rows="4"
+              <textarea name="message" id="message" placeholder="Your message here" rows="4"
                 class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]"></textarea>
             </div>
             <button type="submit"
