--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <p class="font-normal text-[14px] mb-2 text-[#D1D1D1]">Join us to unlock monthly rewards for your special
             occasions. Experience the thrill of our game <br>shows and celebrate with friends and family!</p>
           <div class="flex gap-6">
-            <a href="https://app.bigdaymi.com/auth/register" class="btn-primary">Subscribe </a>
+            <a href="https://app.bigdaymi.com/auth/login" class="btn-primary">Login</a>
             <a href="https://app.bigdaymi.com/auth/register" class="btn-secondary">Get Started</a>
           </div>
         </div>
@@ -355,7 +355,33 @@
           <h2 class="font-bold text-2xl sm:text-3xl lg:text-[40px] text-[#121212] pb-4">Contact Us</h2>
           <p class="text-base sm:text-lg text-[#4F4F4F] pb-6">Let’s Bring Your Celebration to Life!</p>
 
-          <form name="contactForm" class="flex flex-col gap-2">
+          <div class="space-y-5">
+            <div class="flex items-center gap-3">
+              <div class="">
+                <div
+                  class="w-12 h-12 shadow-sm rounded-full border border-gray-200 text-2xl flex items-center justify-center">
+                  <i class="fa-brands fa-whatsapp"></i></div>
+              </div>
+              <div class="">
+                <div class="font-bold text-sm">Via Whatsapp</div>
+                <div class="">+234 706 7132 248</div>
+              </div>
+            </div>
+            <div class="flex items-center gap-3">
+              <div class="">
+                <div
+                  class="w-12 h-12 shadow-sm rounded-full border border-gray-200 text-2xl flex items-center justify-center">
+                  <i class="fa-regular fa-envelope"></i></div>
+              </div>
+              <div class="">
+                <div class="font-bold text-sm">Via E-mail</div>
+                <div class="">hello@bigdaymi.com</div>
+              </div>
+            </div>
+          </div>
+
+
+          <!-- <form name="contactForm" class="flex flex-col gap-2">
             <div class="flex flex-col gap-1">
               <label for="name" class="text-sm sm:text-base font-medium text-[#121212]">Name</label>
               <input name="name" type="text" id="name" placeholder="Your name here"
@@ -375,7 +401,7 @@
               class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 mt-2 hover:bg-[#E58903] transition w-fit">Send
               Message
             </button>
-          </form>
+          </form> -->
         </div>
       </div>
     </section>
@@ -411,9 +437,11 @@
           </ul>
           <ul class="leading-10">
             <li class="text-[#FC9A04] text-lg font-medium">Stay Connected</li>
-            <li><a href=""> <i class="fa-brands fa-facebook-f"></i>acebook</a></li>
+
+            <!-- <li><a href=""> <i class="fa-brands fa-facebook-f"></i>acebook</a></li>
             <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li><a href=""> <i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href=""> <i class="fa-brands fa-x-twitter"></i></a></li> -->
+            <li><a href="https://www.instagram.com/baedy_celebration/profilecard/?igsh=cXF1cmcycndoZmh2" target="_blank"><div class="text-3xl"><i class="fa-brands fa-instagram"></i></div></a></li>
           </ul>
         </div>
 
